2002-06-11 Tomohiro KUBOTA <kubota@debian.org>

	* XIM server could not be changed by using mlconfig; fixed.
	* manpage update for mlconfig.
	* a new sample color configuration file.

2002-06-09 Araki Ken <arakiken@users.sf.net>

	* All characters in line were redrawn if it is modified even a little. fixed.

2002-06-08 Araki Ken <arakiken@users.sf.net>

	* Garbage could be left on the right side of screen.
	  (specially when ut is defined in termcap)
	  fixed.
	* "ESC [ Ps X VT100" sequence is supported.

2002-06-08 Tomohiro KUBOTA <kubota@debian.org>

	* Removed command options from mlconfig which are not
	  needed any more.

2002-06-06 Araki Ken <arakiken@users.sf.net>

	* -K/--maxptys option is removed.
	* Logged lines are not faded when screen is not focued.
	* If 0 is specified as value of -sl option, mlterm died. fixed.

2002-06-05 Tomohiro KUBOTA <kubota@debian.org>

	* renewal of mlconfig.

2002-06-04 Araki Ken <arakiken@users.sf.net>

	* mlterm version number is set as the value of "MLTERM" environmental variable.

2002-06-04 Tomohiro KUBOTA <kubota@debian.org>

	* Widgets for anti-alias and variable-font-width were not
	  displayed in mlconfig, fixed.

2002-06-03 Araki Ken <arakiken@users.sf.net>

	* mlconfig path didn't reflect configure prefix. fixed.
	* w3mmlconfig is updated. (Thanks to Sakamoto Hironori san)

2002-06-03 Araki Ken <arakiken@users.sf.net>

	* multi-column characters were not treated as multi-column in UTF-8 encoding. fixed.
	  (Thanks to Sakamoto Hironori san)
	* If Control Mask is set, mouse position is not reported.
	  (Thanks to Sakamoto Hironori san)
	* mlconfig and mlterm communicate through doc/en/PROTOCOL protocol.
	* mlconfig design is renewed. (Thanks to Kubota Tomohiro san)

2002-05-31 Tomohiro KUBOTA <kubota@debian.org>

	* rewrite manpage for 2002-05-30 changes.

2002-05-30 Araki Ken <arakiken@users.sf.net>

	* string to be output can be defined in ~/.mlterm/key like
	  Control+F1="foobar".