@@ -20,7 +20,8 @@ version 20020206
                      use_combining | use_transbg | use_bidi | copy_paste_via_ucs | xim |
                      locale | wall_picture | pwd | brightness | line_space | screen_width_ratio |
                      screen_height_ratio | vertical_mode | scrollbar_mode | use_multi_column_char |
-                     scrollbar_view_name | sb_fg_color | sb_bg_color | iscii_lang | use_dynamic_comb
+                     scrollbar_view_name | sb_fg_color | sb_bg_color | iscii_lang | use_dynamic_comb |
+		     rows | cols
   value            = <values for each key>
 
 * compatible with other terminals
@@ -65,6 +66,8 @@ version 20020206
   iscii_lang = Assamese | Bengali | Gujarati | Hindi | Kannada | Malayalam | Oriya | Punjabi |
                 Roman | Tamil | Telugu
   use_dynamic_comb = true | false
+  rows = <any ASCII decimal digit>
+  cols = <any ASCII decimal digit>
 
 * note
   o Encoding names are regularized , that is , `-' , `-' are removed , and only upper
